--- a/server/views/jogador.hbs
+++ b/server/views/jogador.hbs
@@ -32,13 +32,13 @@
               <img src="http://cdn.akamai.steamstatic.com/steamcommunity/public/images/avatars/ad/ad54ca6eab0beebbb107da9adce8fd894be54318_medium.jpg" class="avatar">
             </div>
             <div class="media-body">
-              <h3 class="media-heading"><a href="/jogador/76561198009353585/">fegemo</a></h3>
+              <h3 class="media-heading"><a href="/jogador/{{steamid}}/">{{player.realname}}</a></h3>
               <dl class="dl-horizontal">
-                <dt>Nome real:</dt><dd>Flávio Coutinho</dd>
-                <dt>País:</dt><dd>BR</dd>
-                <dt>Perfil no steam:</dt><dd><a href="http://steamcommunity.com/id/fegemo/">@fegemo</a></dd>
-                <dt>Quantidade jogos:</dt><dd>99</dd>
-                <dt>Não jogados:</dt><dd>24</dd>
+                <dt>Nome real:</dt><dd>{{player.realname}}</dd>
+                <dt>País:</dt><dd>{{player.loccountrycode}}</dd>
+                <dt>Perfil no steam:</dt><dd><a href="{{player.profileurl}}">{{player.personaname}}</a></dd>
+                <dt>Quantidade jogos:</dt><dd>{{metrics.gameCount}}</dd>
+                <dt>Não jogados:</dt><dd>{{metrics.notPlayed}}</dd>
               </dl>
             </div>
           </div>
@@ -47,23 +47,25 @@
 
       <!-- Card de detalhes do jogo mais jogado (direita) -->
       <div class="col-md-9">
+        {{#with metrics.favoriteGame}}
         <div class="row-fluid">
           <h2>O jogo favorito</h2>
         </div>
         <div class="row-fluid">
           <div class="game-detailed-card media">
             <div class="media-left">
-              <img src="http://media.steampowered.com/steamcommunity/public/images/apps/200510/eaa298d2b0d908b2c4f5370d2c8c59a8eff887c6.jpg" class="game-logo">
+              <img src="http://media.steampowered.com/steamcommunity/public/images/apps/{{appid}}/{{img_logo_url}}.jpg" class="game-logo">
             </div>
             <div class="media-body">
-              <h4 class="media-heading">XCOM: Enemy Unknown</h4>
+              <h4 class="media-heading">{{name}}</h4>
               <dl class="dl-horizontal">
-                <dt>Tempo de jogo:</dt><dd>34h</dd>
-                <dt>Estatísticas completas:</dt><dd>http://steamcommunity.com/profiles/76561198009353585/stats/200510</dd>
+                <dt>Tempo de jogo:</dt><dd>{{timePlayed}}</dd>
+                <dt>Estatísticas completas:</dt><dd>http://steamcommunity.com/profiles/{{player.steamid}}/stats/{{appid}}</dd>
               </dl>
             </div>
           </div>
         </div>
+        {{/with}}
       </div>
     </div>
 
@@ -75,19 +77,19 @@
         </div>
         <div class="row-fluid">
           <ul class="col-md-12 games-card-list media-list">
-            <!-- Primeiro card de jogo -->
+            {{#each metrics.mostPlayed}}
             <li class="media game-card">
               <div class="media-left media-middle">
-                <img src="http://media.steampowered.com/steamcommunity/public/images/apps/105600/e3f375e78ada9d2ec7ffa521fe1b0052d1d2bbb5.jpg">
+                <img src="http://media.steampowered.com/steamcommunity/public/images/apps/{{appid}}/{{img_logo_url}}.jpg">
               </div>
               <div class="media-body media-middle">
-                <h4>Terraria</h4>
+                <h4>{{name}}</h4>
               </div>
               <div class="media-right media-middle">
-                <span class="badge">40h</span>
+                <span class="badge">{{timePlayed}}</span>
               </div>
             </li>
-            <!-- Próximo jogo aqui -->
+            {{/each}}
           </ul>
         </div>
       </div>
